--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,9 +1,12 @@
 name: MoneyMake
-version: '1.2'
+version: '1.3'
 main: smitedreal.moneyMake.MoneyMake
 api-version: '1.21'
-authors: [ SmiteGee ]
+author: Smited
 commands:
   sell:
     description: Sell gold stuff for in-game money.
     permission-message: You do not have permission to sell items.
+  sendtogov:
+    description: Send money to the government.
+    permission-message: You do not have permission to send money to the government.
